--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "openai": "^4.28.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-is": "^18.3.1",
     "recharts": "^3.5.1",
     "tailwind-merge": "^2.4.0",
     "xlsx": "^0.18.5",
