--- a/package.json
+++ b/package.json
@@ -45,5 +45,8 @@
     "prisma": "^5.18.0",
     "tailwindcss": "^3.4.10",
     "typescript": "^5.5.4"
+  },
+  "prisma": {
+    "seed": "node prisma/seed.js"
   }
 }
